--- a/templates/rds_cluster.tf.j2
+++ b/templates/rds_cluster.tf.j2
@@ -1,7 +1,7 @@
 resource "aws_security_group" "rds_security_group" {
   name        = "tf-rds-sg-{{ project_name }}-{{ project_deployment_environment }}"
   description = "Container Instance Allowed Ports"
-{% if aws_vpc_default == 'true' %}
+{% if aws_vpc_default == true %}
   vpc_id = "${aws_default_vpc.this.id}"
 {% else %}
   vpc_id = "{{ aws_vpc_id }}"
@@ -38,7 +38,7 @@ resource "aws_db_subnet_group" "rds_cluster" {
     name = "tf-rds-cluster-subnet-{{ project_name }}-{{ project_deployment_environment }}"
     description = "Allowed subnets for RDS DB cluster instances"
 
-    {% if aws_vpc_default == 'true' %}
+    {% if aws_vpc_default == true %}
       subnet_ids = ["${aws_default_subnet.a.id}", "${aws_default_subnet.b.id}", "${aws_default_subnet.c.id}"]
     {% else %}
       subnet_ids = ["{{ aws_subnet_id_a }}" , "{{ aws_subnet_id_b }}" , "{{ aws_subnet_id_c }}"]
