--- a/templates/alb_sg.tf.j2
+++ b/templates/alb_sg.tf.j2
@@ -1,7 +1,7 @@
 resource "aws_security_group" "alb" {
   name        = "tf-alb-sg-{{ project_name }}-{{ project_deployment_environment }}"
 
-{% if aws_vpc_default == 'true' %}
+{% if aws_vpc_default == true %}
   vpc_id = "${aws_default_vpc.this.id}"
 {% else %}
   vpc_id = "{{ aws_vpc_id }}"
