--- a/templates/ecs_sg.tf.j2
+++ b/templates/ecs_sg.tf.j2
@@ -1,7 +1,7 @@
 resource "aws_security_group" "this" {
   name        = "tf-ecs-sg-{{ project_name }}-{{ project_deployment_environment }}"
   description = "Container Instance Allowed Ports"
-{% if aws_vpc_default == 'true' %}
+{% if aws_vpc_default == true %}
   vpc_id = "${aws_default_vpc.this.id}"
 {% else %}
   vpc_id = "{{ aws_vpc_id }}"
