--- a/templates/rds.tf.j2
+++ b/templates/rds.tf.j2
@@ -1,7 +1,7 @@
 resource "aws_security_group" "rds_security_group" {
   name        = "tf-rds-sg-{{ project_name }}-{{ project_deployment_environment }}"
   description = "Container Instance Allowed Ports"
-{% if aws_vpc_default == 'true' %}
+{% if aws_vpc_default == true %}
   vpc_id = "${aws_default_vpc.this.id}"
 {% else %}
   vpc_id = "{{ aws_vpc_id }}"
