--- a/templates/alb.tf.j2
+++ b/templates/alb.tf.j2
@@ -1,5 +1,5 @@
 resource "aws_alb" "this" {
-  name = "tf-ecs-{{ project_name }}-{{ project_deployment_environment }}-alb"
+  name = "tf-ecs-alb-{{ organization_name }}-{{ project_type }}-{{ project_name }}-{{ project_deployment_environment }}"
   security_groups = [ "${aws_security_group.alb.id}" ]
 
   # Keep these arguments as is:
@@ -10,6 +10,10 @@ resource "aws_alb" "this" {
         subnets = [ "{{ aws_subnet_id_a }}" , "{{ aws_subnet_id_b }}" , "{{ aws_subnet_id_c }}"]
   {% endif %}
   internal = false
+
+  tags {
+    Name = "tf-ecs-alb-{{ organization_name }}-{{ project_type }}-{{ project_name }}-{{ project_deployment_environment }}"
+  }
 }
 
 
@@ -26,7 +30,7 @@ resource "aws_alb_listener" "default" {
 }
 
 resource "aws_alb_target_group" "this" {
-  name = "tf-ecs-{{ project_name }}-{{ project_deployment_environment }}-alb-tg"
+  name = "tf-ecs-alb-tg-{{ organization_name }}-{{ project_type }}-{{ project_name }}-{{ project_deployment_environment }}"
   port = 80
   protocol = "HTTP"
 {% if aws_vpc_default == true %}
@@ -37,5 +41,8 @@ resource "aws_alb_target_group" "this" {
 
   lifecycle {
     create_before_destroy = true
+  }
+    tags {
+    Name = "tf-ecs-alb-tg-{{ organization_name }}-{{ project_type }}-{{ project_name }}-{{ project_deployment_environment }}"
   }
 }
