--- a/templates/rds.tf.j2
+++ b/templates/rds.tf.j2
@@ -1,5 +1,5 @@
 resource "aws_security_group" "rds_security_group" {
-  name        = "tf-rds-sg-{{ project_name }}-{{ project_deployment_environment }}"
+  name        = "tf-rds-sg-{{ organization_name }}-{{ project_type }}-{{ project_name }}-{{ project_deployment_environment }}"
   description = "Container Instance Allowed Ports"
 {% if aws_vpc_default == true %}
   vpc_id = "${aws_default_vpc.this.id}"
@@ -22,12 +22,12 @@ resource "aws_security_group" "rds_security_group" {
   }
 
   tags {
-    Name = "tf-rds-sg-{{ project_name }}-{{ project_deployment_environment }}"
+    Name = "tf-rds-sg-{{ organization_name }}-{{ project_type }}-{{ project_name }}-{{ project_deployment_environment }}"
   }
 }
 
 resource "aws_db_instance" "default" {
-  identifier = "tf-rds-{{ project_name }}-{{ project_deployment_environment }}"
+  identifier = "tf-rds-{{ organization_name }}-{{ project_type }}-{{ project_name }}-{{ project_deployment_environment }}"
   engine               = "{{ db_engine }}"
   engine_version       = "{{ db_engine_version }}"
   instance_class       = "{{ db_instance_type }}"
@@ -39,7 +39,7 @@ resource "aws_db_instance" "default" {
   vpc_security_group_ids = ["${aws_security_group.rds_security_group.id}"]
 
   auto_minor_version_upgrade = "false"
-  final_snapshot_identifier  = "tf-rds-{{ project_name }}-{{ project_deployment_environment }}-{{ db_engine }}"
+  final_snapshot_identifier  = "tf-rds-{{ db_engine }}-{{ organization_name }}-{{ project_type }}-{{ project_name }}-{{ project_deployment_environment }}"
   copy_tags_to_snapshot      = "false"
 
 {% if project_deployment_environment == 'prod' %}
@@ -52,6 +52,6 @@ resource "aws_db_instance" "default" {
 {% endif %}
 
   tags {
-    Name = "rds-{{ project_name }}-{{ project_deployment_environment }}"
+    Name = "tf-rds-{{ organization_name }}-{{ project_type }}-{{ project_name }}-{{ project_deployment_environment }}"
   }
 }
