--- a/templates/cloudfront_for_alb.tf.j2
+++ b/templates/cloudfront_for_alb.tf.j2
@@ -1,7 +1,7 @@
 resource "aws_cloudfront_distribution" "this" {
   origin {
     domain_name = "${aws_alb.this.dns_name}"
-    origin_id = "origin-elb-{{ organization_name }}-{{ project_type }}-{{ project_deployment_environment }}-{{ project_name }}"
+    origin_id = "origin-{{ organization_name }}-{{ project_type }}-{{ project_deployment_environment }}-{{ project_name }}"
 
     custom_origin_config {
       http_port = 80
@@ -26,7 +26,7 @@ resource "aws_cloudfront_distribution" "this" {
     allowed_methods = ["HEAD", "DELETE", "POST", "GET", "OPTIONS", "PUT", "PATCH"]
     cached_methods = ["HEAD", "GET"]
     compress = true
-    target_origin_id = "origin-elb-{{ project_deployment_environment }}-{{ project_name }}"
+    target_origin_id = "origin-{{ organization_name }}-{{ project_type }}-{{ project_deployment_environment }}-{{ project_name }}"
 
     forwarded_values {
       headers = ["*"]
@@ -49,7 +49,7 @@ resource "aws_cloudfront_distribution" "this" {
   }
 
   tags {
-    Name = "tf-cf-alb-{{ organization_name }}-{{ project_type }}-{{ project_deployment_environment }}-{{ project_name }}"
+    Name = "tf-cf-{{ organization_name }}-{{ project_type }}-{{ project_deployment_environment }}-{{ project_name }}"
   }
 
   viewer_certificate {
