--- a/templates/aws_policies/static_iam_user_policy.tf.j2
+++ b/templates/aws_policies/static_iam_user_policy.tf.j2
@@ -45,7 +45,7 @@ data "aws_iam_policy_document" "user" {
     ]
   }
 
-{% if project_lamdba == true %}
+{% if project_lambda == true %}
   statement {
     sid = "4"
 
