--- a/templates/cloudfront_for_s3.tf.j2
+++ b/templates/cloudfront_for_s3.tf.j2
@@ -20,7 +20,7 @@ resource "aws_cloudfront_distribution" "website_cdn" {
 
   }
 
-  default_root_object = {{ cloudfront_default_root_object }}
+  default_root_object = "{{ cloudfront_default_root_object }}"
 
   custom_error_response {
     error_code            = "404"
