--- a/templates/lambda.tf.j2
+++ b/templates/lambda.tf.j2
@@ -1,20 +1,23 @@
 resource "aws_lambda_function" "login" {
-
   filename         = "{{ project_type }}-{{ project_name }}-login.zip"
-  function_name    = "{{ project_type }}-{{ project_name }}-login"
+  function_name    = "{{ project_type }}-{{ project_name }}-login-{{ project_deployment_environment }}"
   role             = "${aws_iam_user.deployer.arn}"
   handler          = "index.handler"
   source_code_hash = "${base64sha256(file("{{ project_type }}-{{ project_name }}-login.zip"))}"
   runtime          = "nodejs4.3"
+  memory_size      = {{ lambda_memory_size }}
+  timeout          = {{ lambda_timeout }}
 
   environment {
     variables = {
-      WEBSITE_DOMAIN = "bar"
-      REDIRECT_ON_SUCCESS = true
-      CLOUDFRONT_KEYPAIR_ID =
-      ENCRYPTED_CLOUDFRONT_PRIVATE_KEY =
-      ENCRYPTED_HTPASSWD =
+      WEBSITE_DOMAIN = "{{ lambda_vars_WEBSITE_DOMAIN }}"
+      REDIRECT_ON_SUCCESS = {{ lambda_vars_REDIRECT_ON_SUCCESS }}
+      CLOUDFRONT_KEYPAIR_ID = "{{ lambda_vars_CLOUDFRONT_KEYPAIR_ID }}"
+      ENCRYPTED_CLOUDFRONT_PRIVATE_KEY = "{{ lambda_vars_ENCRYPTED_CLOUDFRONT_PRIVATE_KEY }}"
+      ENCRYPTED_HTPASSWD = "{{ lambda_vars_ENCRYPTED_HTPASSWD }}"
+      SESSION_DURATION = "{{ lambda_vars_SESSION_DURATION }}"
     }
   }
+}
 
 }
