--- a/templates/lambda.tf.j2
+++ b/templates/lambda.tf.j2
@@ -20,4 +20,10 @@ resource "aws_lambda_function" "login" {
   }
 }
 
+resource "aws_lambda_permission" "api" {
+  action = "lambda:InvokeFunction"
+  function_name = "${aws_lambda_function.login.function_name}"
+  principal = "apigateway.amazonaws.com"
+  statement_id = "AllowAPIGatewayInvoke"
+  source_arn = "${aws_api_gateway_deploymemt.env.execution_arn}/${aws_api_gateway_integration.login_post.integration_http_method}/${aws_api_gateway_resource.login.path_part}"
 }
