--- a/templates/elasticache.tf.j2
+++ b/templates/elasticache.tf.j2
@@ -1,5 +1,5 @@
 resource "aws_elasticache_replication_group" "this" {
-  replication_group_id          = "tf-{{ organization_name }}-{{ project_type }}-{{ project_name }}-{{ project_deployment_environment }}"
+  replication_group_id          = "tf-{{ project_name }}-{{ project_deployment_environment }}"
   replication_group_description = "tf-elasticache-{{ organization_name }}-{{ project_type }}-{{ project_name }}-{{ project_deployment_environment }}"
   node_type                     = "{{ elasticache_node_type }}"
   number_cache_clusters         = {{ elasticache_num_cache_nodes }}
