--- a/templates/route53.tf.j2
+++ b/templates/route53.tf.j2
@@ -55,15 +55,15 @@ resource "aws_route53_record" "cert_alternative" {
 {% if aws_region != 'us-east-1' %}
 resource "aws_acm_certificate" "us-east-1" {
   provider = "aws.us-east-1"
-  domain_name = "{{ project_name }}.{{ project_env_zone }}"
-  subject_alternative_names = ["*.{{ project_name }}.{{ project_env_zone }}"]
+  domain_name = "{{ domain_url }}}"
+  subject_alternative_names = ["*.{{ domain_url }}"]
   validation_method = "DNS"
 }
 {% endif %}
 
 resource "aws_acm_certificate" "default" {
-  domain_name = "{{ project_name }}.{{ project_env_zone }}"
-  subject_alternative_names = ["*.{{ project_name }}.{{ project_env_zone }}"]
+  domain_name = "{{ domain_url }}"
+  subject_alternative_names = ["*.{{ domain_url }}"]
   validation_method = "DNS"
 }
 
