--- a/templates/cloudflare.tf.j2
+++ b/templates/cloudflare.tf.j2
@@ -9,9 +9,9 @@ resource "cloudflare_record" "this" {
 {% endif %}
   domain = "{{ project_env_zone }}"
 {% if project_deployment_environment == 'prod' or skip_env_domain_prefix == true %}
-  name = "{{ project_name }}.{{ project_env_zone }}"
+  name = "{{ domain_url }}"
 {% else %}
-  name = "{{ project_deployment_environment }}.{{ project_name }}.{{ project_env_zone }}"
+  name = "{{ project_deployment_environment }}.{{ domain_url }}"
 {% endif %}
 {% if project_cloudfront_for_alb == true %}
   value  = "${aws_cloudfront_distribution.this.domain_name}"
@@ -51,14 +51,14 @@ resource "cloudflare_record" "cert_default" {
 {% if aws_region != 'us-east-1' %}
 resource "aws_acm_certificate" "us-east-1" {
   provider = "aws.us-east-1"
-  domain_name = "{{ project_name }}.{{ project_env_zone }}"
+  domain_name = "{{ domain_url }}"
   subject_alternative_names = ["*.{{ project_name }}.{{ project_env_zone }}"]
   validation_method = "DNS"
 }
 {% endif %}
 
 resource "aws_acm_certificate" "default" {
-  domain_name = "{{ project_name }}.{{ project_env_zone }}"
+  domain_name = "{{ domain_url }}"
   subject_alternative_names = ["*.{{ project_name }}.{{ project_env_zone }}"]
   validation_method = "DNS"
 }
