--- a/templates/route53_elasticache.tf.j2
+++ b/templates/route53_elasticache.tf.j2
@@ -1,9 +1,9 @@
 resource "aws_route53_record" "redis" {
   zone_id = "${data.aws_route53_zone.selected.zone_id}"
 {% if project_deployment_environment == 'prod' %}
-  name = "redis.{{ project_name }}.${data.aws_route53_zone.selected.name}"
+  name = "redis.{{ domain_url }}"
 {% else %}
-  name = "redis.{{ project_deployment_environment }}.{{ project_name }}.${data.aws_route53_zone.selected.name}"
+  name = "redis.{{ project_deployment_environment }}.{{ domain_url }}"
 {% endif %}
   type = "CNAME"
 
